fix
layout problem - content becoming a row when changing height now fixed

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,8 +2,7 @@
 @import 'header';
 @import 'overlay';
 
-body {
-    height: 100vh;
+body { 
     margin: 0;
     background-color: #000000;
     display: flex;
